[gd_scene load_steps=5 format=3 uid="uid://cblo07dcqm8f7"]

[ext_resource type="Texture2D" uid="uid://bjiv2ulymg2t7" path="res://graphics/cards/template.aseprite" id="1_gwf4j"]
[ext_resource type="Script" path="res://scripts/Cards/CardDisplay.gd" id="1_tapov"]
[ext_resource type="Texture2D" uid="uid://dtqttj2uomnjr" path="res://graphics/cards/description_box.aseprite" id="3_1grcu"]
[ext_resource type="Texture2D" uid="uid://d1dpnqma7sqvm" path="res://graphics/cards/building_health.aseprite" id="4_xamyu"]

[node name="Card" type="Control"]
z_index = 100
texture_filter = 1
custom_minimum_size = Vector2(128, 204)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -102.0
offset_right = 64.0
offset_bottom = 273.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 102)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_tapov")
metadata/_edit_use_anchors_ = true

[node name="Case" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_right = 64.0
offset_bottom = 204.0
grow_horizontal = 2
mouse_filter = 2

[node name="Template" type="TextureRect" parent="Case"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gwf4j")

[node name="Background" type="TextureRect" parent="Case"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="DescriptionBox" type="TextureRect" parent="Case"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 120.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_1grcu")

[node name="Name" type="Label" parent="Case/DescriptionBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_top = -2.0
offset_right = 60.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.737255, 0.34902, 0.376471, 1)
theme_override_font_sizes/font_size = 11
text = "Name"
horizontal_alignment = 1

[node name="Description" type="RichTextLabel" parent="Case/DescriptionBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 9.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00224, 1)
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 9
theme_override_font_sizes/bold_font_size = 10
bbcode_enabled = true
text = "DescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescriptionDescription"
fit_content = true
scroll_active = false

[node name="EnergyCost" type="Label" parent="Case"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -110.0
offset_right = 10.0
offset_bottom = -63.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.568627, 0.227451, 0.321569, 1)
theme_override_font_sizes/font_size = 31
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="TextureRect" parent="Case"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -25.0
offset_right = 20.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("4_xamyu")

[node name="HealthLabel" type="Label" parent="Case/Health"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -40.0
offset_right = 10.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.568627, 0.227451, 0.321569, 1)
theme_override_font_sizes/font_size = 31
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="item_rect_changed" from="." to="." method="_on_item_rect_changed"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
